--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/15.0.1"
-      fx:controller="at.ac.fhcampuswien.fhmdb.HomeController">
+      fx:controller="at.ac.fhcampuswien.fhmdb.controller.HomeController">
     <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="347.0" spacing="20.0"
           style="-fx-background-color: black;">
         <padding>
