add MainController & fixes

--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
@@ -1,46 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/15.0.1"
-      fx:controller="at.ac.fhcampuswien.fhmdb.controller.HomeController">
-    <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="347.0" spacing="20.0"
-          style="-fx-background-color: black;">
-        <padding>
-            <Insets bottom="7.0" left="10.0" top="7.0"/>
-        </padding>
-        <Label style="-fx-background-color: F5C518;" text="FHMDb">
-            <font>
-                <Font name="Calibri Bold" size="24.0"/>
-            </font>
-            <padding>
-                <Insets left="2.0" right="2.0"/>
-            </padding>
-        </Label>
-        <Label styleClass="text-white" stylesheets="@styles.css" text="Welcome to FHMDb!"/>
-    </HBox>
+
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import javafx.geometry.Insets?>
+<?import com.jfoenix.controls.JFXListView?>
+<VBox
+        xmlns="http://javafx.com/javafx"
+        xmlns:fx="http://javafx.com/fxml"
+        fx:controller="at.ac.fhcampuswien.fhmdb.controller.HomeController"
+        minHeight="575.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="45.0">
     <HBox spacing="5.0" styleClass="background-black" stylesheets="@styles.css">
+        <children>
+            <JFXButton fx:id="sortBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Sort (asc)"/>
+            <TextField fx:id="searchField" prefHeight="25.0" prefWidth="170.0" promptText="Search FHMDb"/>
+            <JFXComboBox fx:id="genreComboBox" focusColor="#f5c518" styleClass="filter-combo-box"
+                         stylesheets="@styles.css"/>
+            <JFXComboBox fx:id="releaseYearBox" focusColor="#f5c518" styleClass="filter-combo-box"
+                         stylesheets="@styles.css"/>
+            <JFXComboBox fx:id="ratingBox" focusColor="#f5c518" styleClass="filter-combo-box"
+                         stylesheets="@styles.css"/>
+            <JFXButton fx:id="searchBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Filter"/>
+            <JFXButton fx:id="clearBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Clear"/>
+        </children>
         <VBox.margin>
             <Insets/>
         </VBox.margin>
         <padding>
             <Insets bottom="20.0" left="10.0" top="20.0"/>
         </padding>
-        <JFXButton fx:id="sortBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Sort (asc)"/>
-        <TextField fx:id="searchField" prefHeight="25.0" prefWidth="170.0" promptText="Search FHMDb"/>
-        <JFXComboBox fx:id="genreComboBox" focusColor="#f5c518" styleClass="filter-combo-box"
-                     stylesheets="@styles.css"/>
-        <JFXComboBox fx:id="releaseYearBox" focusColor="#f5c518" styleClass="filter-combo-box"
-                     stylesheets="@styles.css"/>
-        <JFXComboBox fx:id="ratingBox" focusColor="#f5c518" styleClass="filter-combo-box"
-                     stylesheets="@styles.css"/>
-        <JFXButton fx:id="searchBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Filter"/>
-        <JFXButton fx:id="clearBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Clear"/>
     </HBox>
-    <JFXListView fx:id="movieListView" styleClass="background-black" style="-fx-background-color: black;"
-                 stylesheets="@styles.css" VBox.vgrow="ALWAYS"/>
+    <JFXListView fx:id="movieListView" stylesheets="@styles.css" VBox.vgrow="ALWAYS"/>
 </VBox>
