--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/styles.css
@@ -38,3 +38,11 @@
     -fx-background-color: white;
     -fx-text-fill: #ffffff;
 }
+
+.jfx-hamburger {
+    -fx-background-color: black;
+}
+
+.jfx-hamburger StackPane {
+    -fx-background-color: white;
+}
